fix: push notification is async now
